@@ -10,6 +10,9 @@ MACHINE = $(shell uname -m)
 OSTYPE  = $(shell uname -o | sed --e 's/GNU\///' --e 's/Linux/linux/' --e 's/Msys/windows/')
 ifneq ($(findstring Darwin,$(_DETPLAT_STR)),)
 	OSTYPE  = macos
+	ifneq ($(findstring arm64,$(MACHINE)),)
+		MACHINE = aarch64
+	endif
 endif
 
 WORKDIR = $(PKGNAME)-$(MACHINE)-$(OSTYPE)-$(PKGVER)
